@@ -19,7 +19,11 @@ function settings = readSystemSettings
 
     settings=[];
     systemType='bakingtray'; %This isn't in the YAML because the user should not change it
-    systemVersion=0.55; %This isn't in the YAML because the user should not change it
+
+
+    % Git info will make up the version information
+    g=BakingTray.utils.getGitInfo;
+    systemVersion = sprintf('branch=%s  commit=%s', g.branch, g.hash);
 
     settingsDir = BakingTray.settings.settingsLocation;
 
