@@ -6,6 +6,8 @@ When mature, changes should be merged into master *as a merge commit*  and this 
 In the following text, the tag "USER" indicates a significant change that will impact user experience in some way. 
 The tag "DEVELOPER" indicates a change that significantly impacts the code but is likely not visible to the user. 
 
+17th Feb 2021
+- USER (dev): Software version number in recipe is now the Git branch and commit hash
 
 10th Feb 2021
 - USER (dev): support report can now be generated from the Tools menu.
